<resources>
    <string name="app_name">QuanLyThuChi</string>
    <string name="title">Nhập thông tin thu/ chi</string>
    <string name="noi_dung">Nội dung</string>
    <string name="so_tien">Số tiền</string>
    <string name="nhap_noidung">Hãy nhập nội dung</string>
    <string name="nhap_sotien">Hãy nhập số tiền</string>
    <string name="hinh_thuc">Hình thức</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="them">Thêm</string>
    <string name="nhap_lai">Nhập lại</string>
    <string name="hien_thi">Hiển thị</string>

</resources>
